--- a/src/css/modal-exercise.css
+++ b/src/css/modal-exercise.css
@@ -1,7 +1,7 @@
 .modal-overlay {
   font-family: 'DM Sans', sans-serif;
   position: fixed;
-  z-index: 1;
+  z-index: 20;
   left: 0;
   top: 0;
   width: 100%;
@@ -13,7 +13,7 @@
   position: fixed;
   display: flex;
   flex-direction: column;
-  z-index: 2;
+  z-index: 30;
   background: #242424;
   top: 50%;
   left: 50%;
